syntax = "proto3";

package imy;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message HashRequest {
  string message = 1;
}

message HashResponse {
  string hash = 1;
}

service Imy {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
  rpc Hash(HashRequest) returns (HashResponse) {}
}
